# 250919_VQE-lecture-notes

./: LICENSE  README.md  pyproject.toml  vqe_in_practice.html  vqe_in_practice.qmd
docs/: vqe_in_practice.html
