[project]
name = "250919-vqe-lecture-notes"
version = "0.1.0"
description = "Lecture Notes on VQL to solve optimization problems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pylatexenc>=2.10",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "qiskit-optimization>=0.7.0",
    "scipy>=1.16.3",
]
